tests/NormalTests/paczka1/small_fuzzy/91951104.err
Error in line 3: A139 S876 13,7
Error in line 6: LXTNSDHV A139 91,4
Error in line 5: U582YuhY S876 91,3
